[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/HUD/Battle/botao_normal_crop.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/Battle/linha_para_membro_vivo_crop.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/Battle/cursor_crop.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/Hitch-hike.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/HUD/Caverna.png" type="Texture" id=5]
[ext_resource path="res://src/battle/HUDBattle.gd" type="Script" id=10]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.611765, 0.603922, 0.603922, 1 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 769.0

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 1366.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 512 )

[node name="CaveBackground" type="NinePatchRect" parent="VBoxContainer/ViewportContainer"]
visible = false
margin_right = 1366.0
margin_bottom = 600.0
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 516.0
margin_right = 1366.0
margin_bottom = 769.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
margin_right = 1366.0
margin_bottom = 253.0
texture = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1366.0
margin_bottom = 253.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 253.0

[node name="FireSelection" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3/FireSelection"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 70 )
texture = ExtResource( 3 )

[node name="FireSelection2" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3/FireSelection2"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 70 )
texture = ExtResource( 3 )

[node name="FireSelection3" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3/FireSelection3"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 70 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 253.0

[node name="AttackButton" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 85.0
custom_constants/margin_top = 5

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/AttackButton"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 85.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/AttackButton/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.29236
margin_bottom = -1.29236
custom_fonts/font = ExtResource( 4 )
text = "Atacar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagickButton" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 200.0
margin_bottom = 169.0

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MagickButton"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MagickButton/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Magia"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemButton" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 200.0
margin_bottom = 253.0

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/ItemButton"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/ItemButton/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Item"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 1348.0
margin_bottom = 253.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 1060.0
margin_bottom = 79.0
custom_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
margin_top = 10.0
margin_right = 1060.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_right = 1060.0
margin_bottom = 45.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Shimei"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Alma"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 97.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "50/100"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 20 )
custom_styles/fg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 1060.0
margin_bottom = 69.0
rect_min_size = Vector2( 1060, 20 )
texture = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 83.0
margin_right = 1060.0
margin_bottom = 162.0
custom_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2"]
margin_top = 10.0
margin_right = 1060.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_right = 1060.0
margin_bottom = 45.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Niven"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Alma"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 97.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "76/125"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 20 )
custom_styles/fg = SubResource( 2 )
max_value = 125.0
step = 1.0
value = 76.0
percent_visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 49.0
margin_right = 1060.0
margin_bottom = 69.0
rect_min_size = Vector2( 1060, 20 )
texture = ExtResource( 2 )

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 166.0
margin_right = 1060.0
margin_bottom = 245.0
custom_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3"]
margin_top = 10.0
margin_right = 1060.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer"]
margin_right = 1060.0
margin_bottom = 45.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Miza"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Alma"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 97.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "12/65"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 20 )
custom_styles/fg = SubResource( 2 )
max_value = 65.0
step = 1.0
value = 12.0
percent_visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/VBoxContainer"]
margin_top = 49.0
margin_right = 1060.0
margin_bottom = 69.0
rect_min_size = Vector2( 1060, 20 )
texture = ExtResource( 2 )
